tests/ui/non-copyable-void.stderr
error[E0599]: no method named `clone` found for enum `c_void` in the current scope
  --> $DIR/non-copyable-void.rs:9:23
   |
LL |         let _z = (*y).clone();
   |                       ^^^^^ method not found in `c_void`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
